# SmallRendererOpenGL

./: .gitignore  CMakeLists.txt  README.org
dependencies/: CMakeLists.txt
shader/: fragment.glsl  vertex.glsl
src/: camera.h  main.cpp  sceneobject.cpp  sceneobject.h  smallrender.cpp  smallrender.h
src/common/: shader.cpp  shader.hpp  stb_image.cpp
